update - SecurityConfig.java, application.properties: adding environment varible for accepting CORS from the front-end